add all photos and create flex layout

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,14 @@
         "avoidEscape": true
       }
     ],
-    "no-console": "off"
+    "no-console": "off",
+    "react/require-default-props": [
+      "error",
+      {
+        "forbidDefaultForRequired": true,
+        "functions": "defaultArguments" //Here
+      }
+    ],
+    "react/jsx-filename-extension": "off"
   }
 }
