--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,18 @@
         "functions": "defaultArguments" //Here
       }
     ],
-    "react/jsx-filename-extension": "off"
+    "react/jsx-filename-extension": "off",
+    "rules": {
+      "import/extensions": [
+        "error",
+        "ignorePackages",
+        {
+          "js": 0,
+          "jsx": 0,
+          "ts": 0,
+          "tsx": 0
+        }
+      ]
+    }
   }
 }
