add context and modal view when user clicks on individual artwork

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
         "forbidDefaultForRequired": true,
         "functions": "defaultArguments" //Here
       }
-    ]
+    ],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
   }
 }
