--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.2.2",
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "babel-plugin-macros": "^3.1.0",
     "prop-types": "^15.8.1",
@@ -22,8 +19,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
-    "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "typewriter-effect": "^2.19.0",
+    "uuid": "^9.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
