--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
-    "typewriter-effect": "^2.19.0",
+    "react-simple-typewriter": "^5.0.1",
     "uuid": "^9.0.0"
   },
   "scripts": {
