--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
+    "sass": "^1.71.1",
     "uuid": "^9.0.0"
   },
   "scripts": {
